package com.example.chessboard.ui

const val InteractiveChessBoardTestTag = "interactive-chess-board"
const val PositionSearchClearBoardTestTag = "position-search-clear-board"
const val PositionSearchInitialPositionTestTag = "position-search-initial-position"
const val PositionSearchWhiteShortCastleTestTag = "position-search-white-short-castle"
const val PositionSearchWhiteLongCastleTestTag = "position-search-white-long-castle"
const val PositionSearchBlackShortCastleTestTag = "position-search-black-short-castle"
const val PositionSearchBlackLongCastleTestTag = "position-search-black-long-castle"
const val PositionSearchListTestTag = "position-search-list"
const val PositionSearchSaveNameFieldTestTag = "position-search-save-name-field"
const val SavedPositionsContentTestTag = "saved-positions-content"
const val SavedPositionsPreviousPageTestTag = "saved-positions-previous-page"
const val SavedPositionsNextPageTestTag = "saved-positions-next-page"
const val SavedPositionsSearchActionTestTag = "saved-positions-search-action"
const val SavedPositionsSearchNameFieldTestTag = "saved-positions-search-name-field"
const val PositionSearchResultTemplateActionTestTag = "position-search-result-template-action"
...
